[package]
name = "rs-markdown-browser"
description = "Markdown Browser"
version = "0.1.0"
authors = ["Will Hart <hart.wl@gmail.com>"]

[dependencies]
glob = "0.2"
serde = "1.0"
serde_json="1.0"
serde_derive="1.0"
web-view = "0.2.1"
pulldown-cmark = { version = "0.0.11", default-features = false }

[package.metadata.bundle]
name = "Markdown Browser"
identifier = "io.willhart.markdownbrowser"
version = "0.1.0"
resources = []
copyright = "Copyright (c) William Hart 2018. All rights reserved."
short_description = "Markdown Browser"
long_description = "Markdown Browser"